--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,7 +19,8 @@
 	"postCreateCommand": "./.devcontainer/library-scripts/post-create-command.sh",
 	
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	"forwardPorts": [ 5432, 8080 ],
+	"forwardPorts": [ 8080, 5432 ],
+	"postAttachCommand": "./.devcontainer/library-scripts/post-attach-command.sh",
 
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// "postCreateCommand": "docker --version",
