--- a/.github/actions/check.yml
+++ b/.github/actions/check.yml
@@ -14,22 +14,59 @@ jobs:
         id: check_1_files
         uses: andstor/file-existence-action@v1
         with:
-          files: "osm_qgis_screenshot.png"
+          files: "landuse.sld"
 
       - name: Required files exist
         if: steps.check_1_files.outputs.files_exists != 'true'
         run: |
-          echo Required file, 'osm_qgis_screenshot.png', is missing
+          echo Required file, 'landuse.sld', is missing
           exit 1
-          
-      - name: Check Script
-        id: check_script
+
+      - name: Check Screenshot
+        id: check_2_files
         uses: andstor/file-existence-action@v1
         with:
-          files: "import.cmd"
+          files: "roads.sld"
 
-      - name: Required script exist
-        if: steps.check_script.outputs.files_exists != 'true'
+      - name: Required files exist
+        if: steps.check_2_files.outputs.files_exists != 'true'
         run: |
-          echo Required file, 'import.cmd', is missing
+          echo Required file, 'roads.sld', is missing
           exit 1
+
+      - name: Check Screenshot
+        id: check_3_files
+        uses: andstor/file-existence-action@v1
+        with:
+          files: "pois.sld`"
+
+      - name: Required files exist
+        if: steps.check_3_files.outputs.files_exists != 'true'
+        run: |
+          echo Required file, 'pois.sld`', is missing
+          exit 1
+
+      - name: Check Screenshot
+        id: check_4_files
+        uses: andstor/file-existence-action@v1
+        with:
+          files: "geoserver_layer_group_preview.png"
+
+      - name: Required files exist
+        if: steps.check_4_files.outputs.files_exists != 'true'
+        run: |
+          echo Required file, 'geoserver_layer_group_preview.png', is missing
+          exit 1
+
+      - name: Check Screenshot
+        id: check_5_files
+        uses: andstor/file-existence-action@v1
+        with:
+          files: "qgis_layer_group_preview.png"
+
+      - name: Required files exist
+        if: steps.check_5_files.outputs.files_exists != 'true'
+        run: |
+          echo Required file, 'qgis_layer_group_preview.png', is missing
+          exit 1
+          
